prusti-tests/tests/verify_overflow/ui/counterexamples/pure-function-1.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure-function-1.rs:18:22
   |
18 | fn fail (x: i32,) -> bool {
   |                      ^^^^
   |
note: the error originates here
  --> $DIR/pure-function-1.rs:18:1
   |
18 | / fn fail (x: i32,) -> bool {
19 | |     let y = foo(x);
20 | |     if bar(y) {
21 | |         false
...  |
24 | |     }
25 | | }
   | |_^
note: counterexample for "x"
       value:   -2
  --> $DIR/pure-function-1.rs:18:10
   |
18 | fn fail (x: i32,) -> bool {
   |          ^
note: counterexample for "y"
       value:   3
  --> $DIR/pure-function-1.rs:19:13
   |
19 |     let y = foo(x);
   |             ^^^^^^
note: counterexample for "result"
       value:   false
  --> $DIR/pure-function-1.rs:21:9
   |
21 |         false
   |         ^^^^^
note: counterexample for "foo()"
       value:   3
  --> $DIR/pure-function-1.rs:19:13
   |
19 |     let y = foo(x);
   |             ^^^^^^
note: counterexample for "bar()"
       value:   true
  --> $DIR/pure-function-1.rs:20:8
   |
20 |     if bar(y) {
   |        ^^^^^^

error: aborting due to previous error

